# cmake.rdee

test/basic/: CMakeLists.txt  clean.sh  cmake.sh
test/demo.EasyNC/: CMakeLists.txt
test/demo.EasyNC/src/: CMakeLists.txt  test.numeric.F90
test/demo.rdee_fortran/: CMakeLists.txt
test/demo.rdee_fortran/src/: CMakeLists.txt
